@startuml
set separator none
left to right direction


package "Domain" #DDDDDD {

    package "Repository " #DDDDDD {
        Interface CustomerRepository <<Repository>> {
            + findAllCreatedCustomers() : Iterable<Customer>
            + findAllActiveCustomerRepresentatives() : Iterable<CustomerRepresentative>

        }

        Interface RepositoryFactory <<Factory>> {
            - RepositoryFactory()
            + customers() : CustomerRepository
        }

    }

    class Customer <<Entity>> {
        + Customer (name, address, vat, status, type)
        + addRepresentative (representative)
    }
    class CustomerRepresentative <<Entity>> {
        + CustomerRepresentative (name, position, email, phoneNumber, status, customer)
    }

    class Address <<Value Object>> {

    }
    class VatNumber <<Value Object>> {

    }
    enum CustomerStatus <<Value Object>> {

    }
    enum CustomerType <<Value Object>> {

    }
    class Position <<Value Object>> {

    }
    class Name <<Value Object>> {

    }
    class Email <<Value Object>> {

    }
    class PhoneNumber <<Value Object>> {

    }

    enum CustomerRepresentativeStatus <<Value Object>>{
    }
}

package "UI" #DDDDDD {
    class ListCustomerRepresentativesUI <<UI>> {

    }
}

package "Controller" #DDDDDD {
    class ListCustomerRepresentativesController <<Controller>> {
        + listRepresentativesOfCustomer(customer)
        + listCustomers()
    }
}

package "persistence.impl.jpa" #DDDDDD {
    class JpaCustomerRepository <<Repository>> {
        + findAllCreatedCustomers() : Iterable<Customer>
        + findAllActiveCustomerRepresentatives() : Iterable<CustomerRepresentative>
    }

    class JpaRepositoryFactory <<Factory>> {
        - JpaRepositoryFactory()
        + customers() : CustomerRepository
    }

}

package "persistence.impl.inmemory" #DDDDDD {
    class InMemoryCustomerRepository <<Repository>> {
        + findAllCreatedCustomers() : Iterable<Customer>
        + findAllActiveCustomerRepresentatives() : Iterable<CustomerRepresentative>
    }

    class InMemoryRepositoryFactory <<Factory>> {
        - InMemoryRepositoryFactory()
        + customers() : CustomerRepository
    }
}

package "persistence" #DDDDDD {
    class PersistenceContext {
        repositories() : RepositoryFactory
    }
}

' Relações entre as classes
Customer --> "1..*" CustomerRepresentative : representatives
Customer --> "1" VatNumber : vat
Customer --> "1" Address : address
Customer --> "1" CustomerStatus : status
Customer --> "1" CustomerType : type
Customer ----> "1" Name : name

CustomerRepresentative --> "1" Position : position
CustomerRepresentative --> "1" Name : name
CustomerRepresentative --> "1" Email : email
CustomerRepresentative --> "1" PhoneNumber : phoneNumber
CustomerRepresentative --> "1" CustomerRepresentativeStatus : status


RepositoryFactory ..> CustomerRepository : customers()

CustomerRepository --> "0..*" Customer : customers

ListCustomerRepresentativesUI ..> ListCustomerRepresentativesController
ListCustomerRepresentativesController ..> RepositoryFactory : customers()
ListCustomerRepresentativesController ..> CustomerRepository : customers()
ListCustomerRepresentativesController ..> PersistenceContext : repositories()


PersistenceContext ..> JpaRepositoryFactory : JpaRepositoryFactory()
PersistenceContext ..> InMemoryRepositoryFactory : InMemoryRepositoryFactory()
PersistenceContext ..> RepositoryFactory : customers()

JpaRepositoryFactory ...|> RepositoryFactory : customers()
JpaRepositoryFactory ..> JpaCustomerRepository

JpaCustomerRepository ..|> CustomerRepository : findAllCreatedCustomers()
JpaCustomerRepository ..|> CustomerRepository : findAllActiveCustomerRepresentatives()


InMemoryRepositoryFactory .|> RepositoryFactory : customers()
InMemoryRepositoryFactory ..> InMemoryCustomerRepository

InMemoryCustomerRepository ..|> CustomerRepository : findAllCreatedCustomers()
InMemoryCustomerRepository ..|> CustomerRepository : findAllActiveCustomerRepresentatives()


@enduml